added protien logos

--- a/public/index.html
+++ b/public/index.html
@@ -1919,85 +1919,97 @@
                             <span class="expand-icon">+</span>
                         </div>
                         <div class="category-content">
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Beef.png" alt="Beef" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Beef (lean)</h4>
                                     <p>Muscle building, iron, B12, zinc for immune health</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Beef, ground, lean')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Chicken.png" alt="Chicken" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Chicken</h4>
                                     <p>Lean protein, glucosamine for joints, B vitamins</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Chicken, breast')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Turkey.png" alt="Turkey" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Turkey</h4>
                                     <p>Low-fat protein, selenium, tryptophan for calm</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Turkey, ground')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Lamb.png" alt="Lamb" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Lamb</h4>
                                     <p>Iron-rich, good for dogs with chicken allergies</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Lamb, ground')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Salmon.png" alt="Salmon" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Salmon</h4>
                                     <p>Omega-3 for coat/skin, brain health, anti-inflammatory</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Salmon, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Sardines.png" alt="Sardines" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Sardines</h4>
                                     <p>Omega-3, calcium (with bones), CoQ10 for heart</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Sardines, canned')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Eggs.png" alt="Eggs" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Eggs</h4>
                                     <p>Complete protein, biotin for coat, choline for brain</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Egg, whole, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Beef Liver.png" alt="Beef Liver" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Beef Liver</h4>
                                     <p class="warning-text">Vitamin A powerhouse, iron, B12 - feed sparingly (max 5% of diet)</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Beef liver, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Beef Heart.png" alt="Beef Heart" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Beef Heart</h4>
                                     <p>Taurine for heart health, CoQ10, B vitamins</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Beef heart, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Duck.png" alt="Duck" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Duck</h4>
                                     <p>Novel protein for allergies, rich in iron and amino acids</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Duck, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/Venison.png" alt="Venison" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Venison</h4>
                                     <p>Novel protein for allergies, very lean</p>
                                 </div>
                                 <button class="btn btn-small" onclick="openAddToRecipeModal('Venison, cooked')">+ Add</button>
                             </div>
-                            <div class="ingredient-card glass-dark">
-                                <div class="ingredient-info">
+                            <div class="ingredient-card glass-dark" style="display: flex; align-items: center; gap: 15px;">
+                                <img src="images/ingredients/COD.png" alt="Cod" style="width: 60px; height: 60px; object-fit: cover; border-radius: 8px;">
+                                <div class="ingredient-info" style="flex: 1;">
                                     <h4>Cod</h4>
                                     <p>Lean white fish, iodine for thyroid</p>
                                 </div>
